analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/objectWithTypeArgsAsExpression.kt
private val commonSettingsLazy = o<caret>bject A<LanguageVersionSettings> {
   println(x)
}
